# junk

./: .gitignore  CMakeLists.txt
src/: CMakeLists.txt  cars.h  cities.h  combos.h  compile_matrices.cpp  graph.h  grid_collision.cpp  grid_collision.h  hero.h  main.cpp  main.h  matrix.cpp  miner.cpp  particles.cpp  particles.h  particles_main.h  physics.h  test.cpp  utils.h  water.h  water_of_particles.cpp
